# clinical-curator

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  environment.yml  pyproject.toml  setup.py
backend/: Dockerfile  main.py  requirements.txt
configs/models/: autoencoder.yaml  cnn.yaml  densenet.yaml  mlp.yaml  pretrained.yaml  temporal.yaml
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/layout/: Layout.tsx  Navbar.tsx  Sidebar.tsx
frontend/src/components/ui/: ConfidenceBadge.tsx  LoadingSteps.tsx  ModelCard.tsx  PredictionBar.tsx  UploadZone.tsx  XrayViewer.tsx
frontend/src/hooks/: useModels.ts  usePrediction.ts
frontend/src/pages/: Compare.tsx  Landing.tsx  Results.tsx  Upload.tsx
frontend/src/styles/: tokens.css
frontend/src/types/: api.ts
frontend/src/utils/: format.ts  imageProcessing.ts
notebooks/: master_combined.ipynb  review01_mlp_cnn.ipynb  review02_pretrained_temporal.ipynb  review03_ae_gan.ipynb  review04_densenet_e2e.ipynb
scripts/: train_r1.py  train_r2.py  train_r3.py  train_r4.py
src/: __init__.py
src/data/: __init__.py  dataset.py
src/models/: __init__.py  autoencoder.py  cnn.py  densenet.py  gan.py  mlp.py  pretrained.py  temporal.py
src/training/: trainer.py
src/utils/: __init__.py  gradcam.py  metrics.py  visualization.py
tests/: test_api.py  test_gradcam.py  test_models.py  test_trainer.py
