[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "clinical-curator"
version = "1.0.0"
description = "NIH ChestX-ray14 multi-label classification — MLP, CNN, ResNet, DenseNet, GAN"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "torchvision>=0.16",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "pillow>=10.0",
    "opencv-python-headless>=4.8",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "fpdf2>=2.7",
]

[project.optional-dependencies]
hpo    = ["optuna>=3.5"]
dev    = ["pytest>=8", "pytest-asyncio>=0.23", "httpx>=0.27", "ruff>=0.4", "mypy>=1.9"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
